add get all block_id
